docs(jdk-only): reproduce H16-3 -- the dial yields once per process and leaves a hybrid table no retirement can produce